--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,16 @@
+@import 'bootstrap/dist/css/bootstrap.min.css';
+
 :root{
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
       'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
       'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
   --border-radius: 12px;
+  --input-border-radius: 6px;
   --button-border-radius: 5px;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
   --background-blue-rgb: 136,173,250;
+  --background-light-blue-rgba: 236,242,255,255;
   --border-blue-rgb: 64,123,255,255;
   --box-shadow-blue-rgb: 164,188,251;
 }
@@ -25,4 +29,7 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+p{
+  margin-bottom: 2px !important;
 }
