--- a/src/app/components/notesList.module.css
+++ b/src/app/components/notesList.module.css
@@ -1,8 +1,10 @@
 
 .wrapper{
-background: rgba(var(--background-light-blue-rgba));
-  padding: 10px;
-  font-family: var(--font-mono);
+background: rgba(var(--background-light-grey-rgb));
+padding: 10px;
+font-family: var(--font-mono);
+height: 100vh;
+border-right: 2px solid rgba(123, 123, 123, 0.5);
 }
 
 .cardsWrapper{
