--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,9 +10,10 @@
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
   --background-blue-rgb: 136,173,250;
-  --background-light-blue-rgba: 236,242,255,255;
+  --background-light-grey-rgb: 229,229,229;
   --border-blue-rgb: 64,123,255,255;
   --box-shadow-blue-rgb: 164,188,251;
+  --background-black-rgb: 45,45,45;
 }
 
 * {
