--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
   --border-blue-rgb: 64,123,255,255;
   --box-shadow-blue-rgb: 164,188,251;
   --background-black-rgb: 45,45,45;
+  --hover-over-list-rgb:69,69,69;
 }
 
 * {
