--- a/src/app/components/categories.module.css
+++ b/src/app/components/categories.module.css
@@ -1,5 +1,4 @@
 .wrapper{
-  /* padding-top: 20px; */
   padding-left: 0px;
 }
 .heading{
@@ -20,11 +19,7 @@
 }
 
 .listItem:hover {
-  background-color: black;
-}
-
-.listItem:active {
-  background-color: aqua;
+  background-color: rgba(var(--hover-over-list-rgb));
 }
 
 .items {
