Added Add and Update Note functionality

--- a/src/app/components/sidebar/index.module.css
+++ b/src/app/components/sidebar/index.module.css
@@ -1,8 +1,8 @@
 
 .sidebarWrapper{
 background: rgba(var(--background-black-rgb));
-height: 100vh;
+height: 100%;
 color: rgb(208,208,208);
-font-family: var(--font-mono); 
+font-family: var(--font-mono);
 }
 
