--- a/src/app/notes/notes-list/page.module.css
+++ b/src/app/notes/notes-list/page.module.css
@@ -3,7 +3,7 @@
   padding: 10px;
   font-family: var(--font-mono);
   height: 100vh;
-  /* border-right: 2px solid rgba(123, 123, 123, 0.5); */
+  overflow: auto !important;
 }
 
 .cardsWrapper {
