--- a/src/app/notes/notes-list/sortByCategory.module.css
+++ b/src/app/notes/notes-list/sortByCategory.module.css
@@ -1,4 +1,23 @@
+.container{
+  margin: 10px 10px 10px 15px;
+}
+
+.title{
+  color: rgb(122, 122, 122);
+}
 .wrapper{
   max-height: 200px;
+  display: flex;
   overflow: auto;
+  gap: 10px;
+  padding: 0px 10px 0px 0px;
+}
+.activeCard{
+  background: rgba(var(--background-lightblue-rgba));
+}
+
+.cardContainer{
+  flex: 0 0 auto;
+  width: fit-content(40%);
+  max-width: 100%;
 }
