--- a/src/app/components/sidebar/categories.module.css
+++ b/src/app/components/sidebar/categories.module.css
@@ -2,7 +2,7 @@
   padding-left: 0px;
 }
 .heading{
-  color: rgb(122, 122, 122);
+  color: rgba(var(--heading-component-rgb));
   padding-left: 25px;
 }
 
@@ -25,7 +25,7 @@
   background-color: rgb(32, 32, 32);
 }
 .activeCategory .icon{
-  color: rgb(81, 131, 245);
+  color: rgba(var(--background-icon-active-rgb))
 }
 
 .items {
